# mtzcode

./: .gitignore  LICENSE  README.md  pyproject.toml
mtzcode/: __init__.py  __main__.py  agent.py  auto_cli.py  autonomous.py  cli.py  client.py  commands.py  config.py  habilidades.py  history.py  knowledge.py  profiles.py  runtime.py  session_log.py  settings.py  skills.py  todos.py  training.py
mtzcode/agents/: __init__.py  events.py  models.py  presets.py  runner.py  store.py  workspace.py
mtzcode/finetune/: README.md  collect_data.py  export_ollama.py  format_data.py  train_lora.py
mtzcode/mcp/: README.md  __init__.py  bridge.py  client.py  example_config.json
mtzcode/orchestrator/: __init__.py  store.py  subagent.py
mtzcode/prompts/: plan_mode.md  system.md
mtzcode/rag/: __init__.py  embeddings.py  index.py  indexer.py
mtzcode/scheduler/: __init__.py  cli_commands.py  cron.py  daemon.py  runner.py  store.py
mtzcode/tools/: __init__.py  apify.py  applescript.py  base.py  bash.py  browser.py  browser_README.md  clipboard.py  docx.py  edit.py  find_files.py  find_images.py  github.py  glob.py  grep.py  notify.py  open_app.py  open_url.py  orchestrator.py  pdf.py  python_exec.py  read.py  scaffold.py  screenshot.py  search.py  search_knowledge.py  text_writer.py  todo.py  web_fetch.py  web_search.py  write.py  xlsx.py
mtzcode/web/: __init__.py  server.py
mtzcode/web/static/: index.html
skills/: README.md
skills/code-reviewer/: SKILL.md
skills/git-helper/: SKILL.md
skills/javascript-expert/: SKILL.md
skills/python-expert/: SKILL.md
skills/sql-dba/: SKILL.md
skills/writer-pt/: SKILL.md
tests/: test_agents_managed.py  test_workspace_and_presets.py
