[project]
name = "mtzcode"
version = "0.0.1"
description = "Assistente de código no terminal, 100% local, via Ollama"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "jpmortaza" }]
dependencies = [
    "httpx>=0.27",
    "rich>=13.7",
    "typer>=0.12",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
mtzcode = "mtzcode.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mtzcode"]
