[project]
name = "mtzcode"
version = "0.0.1"
description = "Assistente de código no terminal, 100% local, via Ollama"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Jean Mortaza" }]
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "rich>=13.7",
    "typer>=0.12",
    "pydantic>=2.7",
    "numpy>=1.26",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
docs = ["pypdf>=4.0", "python-docx>=1.1", "openpyxl>=3.1", "markdown>=3.5", "weasyprint>=60.0"]
web = ["html2text>=2024.2", "beautifulsoup4>=4.12"]
browser = ["playwright>=1.40"]
mcp = ["mcp>=1.0"]
schedule = ["croniter>=2.0"]
finetune = ["mlx-lm>=0.20", "datasets>=2.18"]
all = [
    "pypdf>=4.0", "python-docx>=1.1", "openpyxl>=3.1", "markdown>=3.5", "weasyprint>=60.0",
    "html2text>=2024.2", "beautifulsoup4>=4.12",
    "playwright>=1.40",
    "mcp>=1.0",
    "croniter>=2.0",
]

[project.scripts]
mtzcode = "mtzcode.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mtzcode"]
